# ET-2.0-Hackathon

./: README.md
Backend/: .gitignore  PARSING_PIPELINE.md  image_enricher.py  parsing_pipeline.py  pyproject.toml  requirments.txt  tempCodeRunnerFile.py  test.py
Backend/enriched_files/: Maintenance and operational patterns.md  chapter-651.md  environment_regulations.md  incident_Risk_Assessment.md
Backend/graph_rag_pipeline/: settings.yaml
Backend/graph_rag_pipeline/input/: 20053810.md  Advisory-on-spare-parts-management-in-thermal-power-plants.md  Confined_Space_Entry_Procedure.md  Current_transformer_gb.md  Environmental, Health, and Safety Guidelines for.md  Industrial pump hand book_GB.md  Lockout__Tagout_LOTO.md  Manual-Boiler-Feed-IND.md  SOP-powerplant.md  The_Factories_Act-1948.md  ash_handling.md  design-of-emergency-shutdown-system-for-steam-turbo-generator-IJERTV4IS040093.md  equipment and services.md  incident_reports.md  maintainance_records.md  manufacturing-of-thermal-power-generation-equipment.md  pump_installation_mnual.md  safety_during_construction.md  standard_design_and_guidelines-1-150.md
Backend/graph_rag_pipeline/prompts/: basic_search_system_prompt.txt  community_report_graph.txt  community_report_text.txt  drift_reduce_prompt.txt  drift_search_system_prompt.txt  extract_claims.txt  extract_graph.txt  global_search_knowledge_system_prompt.txt  global_search_map_system_prompt.txt  global_search_reduce_system_prompt.txt  local_search_system_prompt.txt  summarize_descriptions.txt  (+1 more)
Backend/graph_rag_pipiline/: chunking.ipynb  settings.yaml
(+8 files in other folders)
